refactor landing page

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,7 +20,7 @@
   --color-black: #181c31;
   --color-blackho: #2c3149;
   --color-blacksection: #1c2136;
-  --color-primary: #006bff;
+  --color-primary: #0007ff;
   --color-primaryho: #0063ec;
   --color-primary-accent: #0056d6;
   --color-meta: #20c5a8;
